Body image with text wrap around working. Broken Footer. Need to fix

--- a/style.css
+++ b/style.css
@@ -61,7 +61,10 @@ body {
     font-weight: bold;
 }
 
-
+#bioImage{
+    margin: 15px;
+    width: 30%;
+}
 /* FOOTER CSS OVERRIDE */
 
 #sticky-footer {
